# NeoHaskell

./: .all-contributorsrc  .coderabbit.yaml  .envrc  .gitattributes  .gitignore  .hlint.yaml  .hoogle-neo.hoo  .hoogle-neo.warn  .hoogle-vanilla.warn  .hoogle.warn  AGENTS.md  CHANGELOG.md  CLAUDE.md  HASKELL_NIX_MIGRATION.md  IMPLEMENTATION_PLAN.md  README.md  cabal.project  cabal.project.dev  cabal.project.freeze  command-execution-example.md  common.nix  default.nix  dev  devenv.nix  devenv.yaml  docker-compose.yml  feature-progress.md  flake.nix  fourmolu.yaml  hie.yaml  oldshellnxi.nix  project.yaml  shell.nix
cli/: AGENTS.md  default.nix  nhcli.cabal
cli-next/: README.md  cabal.project  default.nix  neo-sandbox.cabal  neo.json  next.cabal  shell.nix
cli-next/.launcher/: Launcher.hs
cli-next/app/: Main.hs
cli-next/src/: Neo.hs  NeoSandbox.hs
cli-next/src/Neo/: Model.hs
cli/app/: Main.hs
cli/design/: AGENTS.md  RESEARCH.md  compiler-strategy.md  syntax.md  user-flows.md
cli/launcher/: Launcher.hs  Main.hs
cli/nix/: haskell-project.nix
cli/src/: App.hs  Neo.hs  NeoNext.hs
cli/src/Neo/: Build.hs  Command.hs  Core.hs  Event.hs  New.hs  Repl.hs  Run.hs  Services.hs  Shell.hs  State.hs  Transpile.hs  Triggers.hs  View.hs
cli/src/NeoHaskell/: App.hs
cli/test/: Main.hs  NeoNextSpec.hs
codemap/: MAP.md  (+11 more)
core/: AGENTS.md  LICENSE  REFERENCE.md  default.nix  nhcore.cabal
core/architecture/: Services.hs
core/architecture/Services/: EventStore.hs
core/auth/: Auth.hs
core/auth/Auth/: Claims.hs  Config.hs  Discovery.hs  Error.hs  Hostname.hs  Jwks.hs  Jwt.hs  Middleware.hs  OAuth2.hs  Options.hs  SecretStore.hs  UrlValidation.hs
core/concurrency/: AsyncIO.hs  AsyncTask.hs  AtomicVar.hs  Channel.hs  ConcurrentMap.hs  ConcurrentVar.hs  DurableChannel.hs  Lock.hs  Stream.hs
core/config/: Config.hs
core/config/Config/: Builder.hs  Core.hs  Global.hs  HasConfig.hs  Naming.hs  Parser.hs  TH.hs
core/core/: Accumulator.hs  Array.hs  Basics.hs  Bytes.hs  Char.hs  Collection.hs  Console.hs  Core.hs  DateTime.hs  File.hs  Float.hs  Function.hs  IO.hs  Int.hs  LinkedList.hs  Log.hs  Map.hs  Maybe.hs  Path.hs  Record.hs  Redacted.hs  Result.hs  Set.hs  Task.hs  Text.hs  Tuple.hs  Unit.hs  Unknown.hs  Uuid.hs  Var.hs  Version.hs
core/decimal/: Decimal.hs
core/http/: Http.hs
core/http/Http/: Client.hs
core/json/: Json.hs
core/layout/: Layout.hs
core/layout/Layout/: Internal.hs
core/neoql/: NeoQL.hs
core/neoql/NeoQL/: Execute.hs  Parser.hs  Types.hs
core/options-parser/: Command.hs  OptionsParser.hs
core/parser/: Parser.hs
core/parser/Parser/: Internal.hs
core/platform/: Action.hs  Command.hs  Html.hs  Platform.hs  Subscription.hs  Trigger.hs
core/reflection/: TypeName.hs
core/schema/: Schema.hs
core/schema/Schema/: JsonSchema.hs  OpenApi.hs
core/service/: AGENTS.md  Action.hs  Application.hs  Decider.hs  Decision.hs  EventVariantOf.hs  Html.hs  Integration.hs  Service.hs  Trigger.hs
core/service/Integration/: Command.hs  Exit.hs  Lifecycle.hs  Timer.hs
core/service/Service/: AccessControl.hs  ActionWorker.hs  Adapter.hs  Application.hs  Auth.hs  Command.hs  CommandExecutor.hs  CommandHandler.hs  CommandResponse.hs  Core.hs  Definition.hs  Entity.hs  EntityFetcher.hs  Error.hs  Event.hs  EventStore.hs  EventWorker.hs  Model.hs  Protocol.hs  Query.hs  QueryObjectStore.hs  RenderWorker.hs  Response.hs  Runtime.hs  RuntimeState.hs  ServiceDefinition.hs  SnapshotCache.hs  Transport.hs
core/src/: Accumulator.hs  Array.hs  Basics.hs  Bool.hs  Char.hs  Console.hs  Core.hs  Debug.hs  Default.hs  Dsl.hs  HashMap.hs  Int.hs  JSON.hs  Kinds.hs  Label.hs  Lazy.hs  LazySequence.hs  LinkedList.hs  Map.hs  Maybe.hs  Meta.hs  Operators.hs  Optional.hs  Path.hs  Pipe.hs  Process.hs  Promise.hs  Record.hs  Reflect.hs  Result.hs  Schema.hs  Str.hs  String.hs  Subprocess.hs  Text.hs  Types.hs  Version.hs  Void.hs
core/src/Cli/: Codec.hs
core/src/Debug/: Panic.hs  Spy.hs  ToDo.hs  Trace.hs
core/src/HaskellCompatibility/: Conversion.hs  Generic.hs  IO.hs  List.hs  Monad.hs  Numbers.hs  String.hs  Syntax.hs
core/src/JSON/: Compatibility.hs
core/src/Schema/: Common.hs  Property.hs  Types.hs
core/src/Str/: Internal.hs
core/src/String/: Internal.hs
core/src/Traits/: Addable.hs  Appendable.hs  Applicable.hs  Default.hs  Defaultable.hs  Dsl.hs  Equatable.hs  HasDefault.hs  HasEquals.hs  HasVariables.hs  Mappable.hs  Ordered.hs  Schema.hs  Serializable.hs  Thenable.hs  VariableHolder.hs
core/syntax/Syntax/: Comment.hs  Function.hs
core/system/: Directory.hs  Environment.hs  File.hs  Path.hs  Subprocess.hs  Time.hs
core/test/: ArraySpec.hs  ConcurrentMapSpec.hs  ConsoleSpec.hs  DeciderSpec.hs  DecimalSpec.hs  EnvironmentSpec.hs  EventVariantOfSpec.hs  IOSpec.hs  IntSpec.hs  IntegrationSpec.hs  LogSpec.hs  Main.hs  OutboundIntegrationSpec.hs  SchemaSpec.hs  SetSpec.hs  StreamSpec.hs  TaskSpec.hs  TextSpec.hs
core/test-auth/: Main.hs
core/test-core/: LayoutSpec.hs  Main.hs  ParserSpec.hs  RedactedSpec.hs
core/test-integration/: Main.hs
core/test-service/: Main.hs
core/testlib/: Test.hs
core/toml/: Toml.hs
core/traits/: Appendable.hs  Applicable.hs  Collection.hs  Combinable.hs  Default.hs  Documented.hs  Mappable.hs  Thenable.hs  ToText.hs
core/yaml/: Yaml.hs
installer/: Cargo.toml  README.md
installer/scripts/: bootstrap.sh
installer/src/: detect.rs  error.rs  install.rs  lib.rs  main.rs  ui.rs  verify.rs
installer/tests/: consistency.rs  integration.rs
integrations/: AGENTS.md  nhintegrations.cabal
integrations/Integration/: Acs.hs  Agent.hs  AzureAI.hs  Brevo.hs  Http.hs  OpenRouter.hs  Oura.hs  Pdf.hs
integrations/http/: LICENSE  nhintegration-http.cabal
lsp/: neohaskell-lsp.cabal
lsp/launcher/: Main.hs
lsp/test/: Main.hs
plugins/clippy/: .clippy-terse.dhall  LICENSE  README.md  nhclippy.cabal
testbed/: AGENTS.md  README.md  nhtestbed.cabal
testbed/app/: Main.hs
testbed/launcher/: Launcher.hs
testbed/scripts/: run-tests.sh
testbed/src/: App.hs  Cart.hs
testbed/tests/: readiness.hurl
(+1269 files in other folders)
