cabal-version: 3.4
name: nhcli
version: 0.1.0

common common_cfg
  ghc-options:
    -Wall
    -Wno-orphans
    -threaded
    -fno-warn-partial-type-signatures
    -fno-warn-name-shadowing
    -Werror

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DeriveDataTypeable
    DuplicateRecordFields
    ImportQualifiedPost
    ImpredicativeTypes
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedLists
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    QualifiedDo
    QuasiQuotes
    Strict
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
    base,
    nhcore,

library
  import: common_cfg
  exposed-modules:
    App
    Neo.Build.Core
    Neo.Build.Commands.StartBuild
    Neo.Build.Service
    Neo.Build.Integrations
    Neo.Project.Core
    Neo.Project.Commands.InitProject
    Neo.Project.Service
    Neo.Project.Integrations
    Neo.Run.Core
    Neo.Run.Commands.RunProject
    Neo.Run.Service
    Neo.Run.Integrations
  hs-source-dirs: src
  default-language: GHC2021

executable nhcli
  import: common_cfg
  main-is: Launcher.hs
  build-depends:
    nhcli,
  hs-source-dirs: launcher
  default-language: GHC2021

test-suite nhcli-test
  import: common_cfg
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base,
    hspec,
    nhcli,
    nhcore,
  default-language: GHC2021
  other-modules:
    Neo.Project.CoreSpec
    Neo.Project.Commands.InitProjectSpec
    Neo.Build.CoreSpec
    Neo.Build.Commands.StartBuildSpec
    Neo.Run.CoreSpec
    Neo.Run.Commands.RunProjectSpec
