cabal-version: 3.4
name: nhcli
version: 0.1.0
synopsis: NeoHaskell CLI and Language Server
description: Command-line interface and Language Server Protocol implementation for NeoHaskell.
homepage: https://neohaskell.org
license: Apache-2.0
license-file: LICENSE
author: Nikita Tchayka
maintainer: nhlib@nickseagull.dev
copyright:
category: Development
build-type: Simple

common common_cfg
  ghc-options:
    -Wall
    -Wno-orphans
    -threaded
    -fno-warn-partial-type-signatures
    -fno-warn-name-shadowing
    -Werror

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DeriveDataTypeable
    DuplicateRecordFields
    ImportQualifiedPost
    ImpredicativeTypes
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedLists
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    QualifiedDo
    QuasiQuotes
    Strict
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
    lsp >=2.0 && <3,
    lsp-types >=2.0 && <3,
    nhcore,

library
  import: common_cfg
  exposed-modules:
    NeoHaskell.LSP.Handlers
    NeoHaskell.LSP.Server
    NeoHaskell.LSP.State

  build-depends:
  hs-source-dirs: src
  default-language: GHC2021

executable nhcli
  import: common_cfg
  main-is: Main.hs
  build-depends:
    nhcli

  hs-source-dirs: launcher
  default-language: GHC2021

test-suite nhcli-test
  import: common_cfg
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
  build-depends:
    containers,
    hspec,
    nhcli,
    stm,

  default-language: GHC2021
  ghc-options:
    -rtsopts
    -with-rtsopts=-N
