cabal-version: 3.4
name: nhcore
version: 0.9.1
synopsis: Core Library for NeoHaskell
description: NeoHaskell is a dialect of Haskell that is focused on newcomer-friendliness and productivity.
homepage: https://neohaskell.org
license: Apache-2.0
author: Nikita Tchayka
maintainer: nhlib@nickseagull.dev
copyright:
category: Development
build-type: Simple

common common_cfg
  ghc-options:
    -Wall
    -Wno-orphans
    -fno-warn-partial-type-signatures
    -fno-warn-name-shadowing
    -Werror
    -threaded

  build-depends:
    Cabal,
    QuickCheck,
    aeson,
    async,
    base,
    bytestring,
    containers,
    contravariant-extras,
    data-default,
    dir-traverse,
    directory,
    file-embed,
    ghc-prim,
    hasql,
    hasql-notifications,
    hasql-pool,
    hasql-th,
    hspec,
    http-conduit,
    large-anon,
    monad-loops,
    optparse-applicative,
    path,
    pretty-simple,
    process,
    quickcheck-instances,
    strict,
    string-interpolate,
    template-haskell,
    text,
    text-manipulate,
    time,
    transformers,
    unagi-chan,
    uuid,
    vector,
    with-utf8,

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DeriveDataTypeable
    DuplicateRecordFields
    ImportQualifiedPost
    ImpredicativeTypes
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    QualifiedDo
    QuasiQuotes
    Strict
    TemplateHaskell
    TypeFamilies

library
  import: common_cfg
  exposed-modules:
    -- Core
    -- System
    -- OptionsParser
    -- JSON
    -- Traits
    -- Service
    -- Meta
    -- Concurrency
    -- Http
    -- Test
    Accumulator
    Appendable
    Applicable
    Array
    AsyncTask
    Basics
    Bytes
    Channel
    Char
    Collection
    Combinable
    Command
    ConcurrentVar
    Console
    Core
    DateTime
    Decision
    Default
    Directory
    DurableChannel
    Environment
    File
    Function
    Http
    Http.Client
    IO
    Int
    Json
    LinkedList
    Lock
    Map
    Mappable
    Maybe
    Path
    Record
    Result
    Service.Command
    Service.Command.Core
    Service.CommandHandler
    Service.CommandHandler.Core
    Service.CommandHandler.TH
    Service.EntityFetcher
    Service.EntityFetcher.Core
    Service.Event
    Service.Event.EntityName
    Service.Event.EventMetadata
    Service.Event.StreamId
    Service.Event.StreamPosition
    Service.EventStore
    Service.EventStore.Core
    Service.EventStore.InMemory
    Service.EventStore.Postgres
    Service.EventStore.Postgres.Internal
    Service.EventStore.Postgres.Internal.Core
    Service.EventStore.Postgres.Internal.Notifications
    Service.EventStore.Postgres.Internal.PostgresEventRecord
    Service.EventStore.Postgres.Internal.Sessions
    Service.EventStore.Postgres.Internal.SubscriptionStore
    Service.Model
    Service.Model.Core
    Set
    Stream
    Subprocess
    Task
    Test
    Test.AppSpec
    Test.AppSpec.AppSpec
    Test.AppSpec.Scenario
    Test.AppSpec.Verify
    Test.Service.Command
    Test.Service.Command.Core
    Test.Service.Command.Decide.Context
    Test.Service.Command.Decide.Spec
    Test.Service.CommandHandler
    Test.Service.CommandHandler.Core
    Test.Service.CommandHandler.Execute.Context
    Test.Service.CommandHandler.Execute.Spec
    Test.Service.EntityFetcher
    Test.Service.EntityFetcher.Core
    Test.Service.EntityFetcher.Fetch.Context
    Test.Service.EntityFetcher.Fetch.Spec
    Test.Service.EventStore
    Test.Service.EventStore.BatchValidation.Context
    Test.Service.EventStore.BatchValidation.Spec
    Test.Service.EventStore.Core
    Test.Service.EventStore.GlobalStreamOrdering.Context
    Test.Service.EventStore.GlobalStreamOrdering.Spec
    Test.Service.EventStore.IndividualStreamOrdering.Context
    Test.Service.EventStore.IndividualStreamOrdering.Spec
    Test.Service.EventStore.LocalPositionStamping.Spec
    Test.Service.EventStore.OptimisticConcurrency.Context
    Test.Service.EventStore.OptimisticConcurrency.Spec
    Test.Service.EventStore.ReadAllBackwardsFromEnd.Context
    Test.Service.EventStore.ReadAllBackwardsFromEnd.Spec
    Test.Service.EventStore.ReadAllForwardsFromStart.Context
    Test.Service.EventStore.ReadAllForwardsFromStart.Spec
    Test.Service.EventStore.StreamTruncation.Context
    Test.Service.EventStore.StreamTruncation.Spec
    Test.Service.EventStore.Subscriptions.Context
    Test.Service.EventStore.Subscriptions.SimpleSpec
    Test.Service.EventStore.Subscriptions.Spec
    Test.Spec
    Text
    Thenable
    Time
    ToText
    Trigger
    Tuple
    TypeName
    Unit
    Unknown
    Uuid
    Var
    Version

  -- other-modules:
  -- other-extensions:
  hs-source-dirs:
    core
    concurrency
    service
    json
    traits
    system
    http
    meta
    testlib
    options-parser

  default-language: GHC2021

test-suite nhcore-test
  import: common_cfg
  default-language: GHC2021
  ghc-options:
    -rtsopts
    -with-rtsopts=-N

  other-modules:
    Integration.App
    Integration.App.Cart
    Integration.App.Cart.Commands.CreateCart
    Integration.App.Cart.Core
    Service.CommandHandlerSpec
    Service.EventStore.InMemorySpec
    Service.EventStore.Postgres.Internal.SubscriptionStoreSpec
    Service.EventStore.PostgresSpec
    SetSpec
    StreamSpec
    Test.AppSpec.AppSpecSpec
    Test.AppSpec.VerifySpec
    Test.Model.TypeLevelSpec
    Test.ModelSpec

  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base,
    hspec,
    nhcore,
