cabal-version: 3.4
name: nhcore
version: 0.9.1
synopsis: Core Library for NeoHaskell
description: NeoHaskell is a dialect of Haskell that is focused on newcomer-friendliness and productivity.
homepage: https://neohaskell.org
license: Apache-2.0
author: Nikita Tchayka
maintainer: nhlib@nickseagull.dev
copyright:
category: Development
build-type: Simple

common common_cfg
  ghc-options:
    -Wall
    -Wno-orphans
    -fno-warn-partial-type-signatures
    -fno-warn-name-shadowing
    -Werror
    -threaded

  build-depends:
    Cabal,
    QuickCheck,
    aeson,
    async,
    base,
    bytestring,
    containers,
    contravariant-extras,
    data-default,
    deepseq,
    dir-traverse,
    directory,
    file-embed,
    ghc-prim,
    hashable,
    stm,
    stm-containers,
    list-t,
    hasql,
    hasql-notifications,
    hasql-pool,
    hasql-th,
    hspec,
    http-conduit,
    http-types,
    large-anon,
    monad-loops,
    optparse-applicative,
    path,
    pretty-simple,
    process,
    quickcheck-instances,
    random,
    should-not-typecheck,
    strict,
    string-interpolate,
    template-haskell,
    text,
    text-manipulate,
    time,
    transformers,
    unagi-chan,
    uuid,
    vector,
    wai,
    warp,
    with-utf8,

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DeriveDataTypeable
    DuplicateRecordFields
    ImportQualifiedPost
    ImpredicativeTypes
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedLists
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    QualifiedDo
    QuasiQuotes
    Strict
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import: common_cfg
  exposed-modules:
    Accumulator
    Appendable
    Applicable
    Array
    AsyncTask
    Basics
    Bytes
    Channel
    Char
    Collection
    Combinable
    Command
    ConcurrentMap
    ConcurrentVar
    Console
    Core
    DateTime
    Decider
    Default
    Directory
    DurableChannel
    Environment
    File
    Float
    Function
    Http
    Http.Client
    IO
    Int
    Json
    LinkedList
    Lock
    Map
    Mappable
    Maybe
    Path
    Record
    Result
    Service
    Service.Command
    Service.Command.Core
    Service.CommandExecutor
    Service.CommandExecutor.Core
    Service.CommandExecutor.TH
    Service.Entity
    Service.Entity.Core
    Service.EntityFetcher
    Service.EntityFetcher.Core
    Service.Error
    Service.Event
    Service.Event.EntityName
    Service.Event.EventMetadata
    Service.Event.StreamId
    Service.Event.StreamPosition
    Service.EventStore
    Service.EventStore.Core
    Service.EventStore.InMemory
    Service.EventStore.Postgres
    Service.EventStore.Postgres.Internal
    Service.EventStore.Postgres.Core
    Service.EventStore.Postgres.Notifications
    Service.EventStore.Postgres.PostgresEventRecord
    Service.EventStore.Postgres.Sessions
    Service.EventStore.Postgres.SubscriptionStore
    Service.Query
    Service.Query.Core
    Service.QueryObjectStore
    Service.QueryObjectStore.Core
    Service.Response
    Service.SnapshotCache
    Service.SnapshotCache.Core
    Service.SnapshotCache.InMemory
    Service.SnapshotCache.Snapshot
    Service.ServiceDefinition
    Service.ServiceDefinition.Core
    Service.Transport
    Service.Transport.Web
    Set
    Stream
    Subprocess
    Task
    Test
    Test.AppSpec
    Test.AppSpec.AppSpec
    Test.AppSpec.Scenario
    Test.AppSpec.Verify
    Test.CompileTime
    Test.Service.Command
    Test.Service.Command.Core
    Test.Service.Command.Decide.Context
    Test.Service.Command.Decide.Spec
    Test.Service.CommandHandler
    Test.Service.CommandHandler.Core
    Test.Service.CommandHandler.Execute.Context
    Test.Service.CommandHandler.Execute.Spec
    Test.Service.EntityFetcher
    Test.Service.EntityFetcher.Core
    Test.Service.EntityFetcher.Fetch.Context
    Test.Service.EntityFetcher.Fetch.Spec
    Test.Service.EntityFetcher.FetchWithCache.Context
    Test.Service.EntityFetcher.FetchWithCache.Spec
    Test.Service.EventStore
    Test.Service.EventStore.BatchValidation.Context
    Test.Service.EventStore.BatchValidation.Spec
    Test.Service.EventStore.Core
    Test.Service.EventStore.GlobalStreamOrdering.Context
    Test.Service.EventStore.GlobalStreamOrdering.Spec
    Test.Service.EventStore.IndividualStreamOrdering.Context
    Test.Service.EventStore.IndividualStreamOrdering.Spec
    Test.Service.EventStore.LocalPositionStamping.Spec
    Test.Service.EventStore.OptimisticConcurrency.Context
    Test.Service.EventStore.OptimisticConcurrency.Spec
    Test.Service.EventStore.ReadAllBackwardsFromEnd.Context
    Test.Service.EventStore.ReadAllBackwardsFromEnd.Spec
    Test.Service.EventStore.ReadAllForwardsFromStart.Context
    Test.Service.EventStore.ReadAllForwardsFromStart.Spec
    Test.Service.EventStore.StreamTruncation.Context
    Test.Service.EventStore.StreamTruncation.Spec
    Test.Service.EventStore.Subscriptions.Context
    Test.Service.EventStore.Subscriptions.SimpleSpec
    Test.Service.EventStore.Subscriptions.Spec
    Test.Service.SnapshotCache
    Test.Service.SnapshotCache.InMemory.Context
    Test.Service.SnapshotCache.InMemory.Spec
    Test.Spec
    Text
    Thenable
    Time
    ToText
    Trigger
    Tuple
    TypeName
    Unit
    Unknown
    Uuid
    Var
    Version

  -- other-modules:
  -- other-extensions:
  hs-source-dirs:
    core
    concurrency
    service
    json
    traits
    system
    http
    meta
    testlib
    options-parser

  default-language: GHC2021

test-suite nhcore-test
  import: common_cfg
  default-language: GHC2021
  ghc-options:
    -rtsopts
    -with-rtsopts=-N

  other-modules:
    ConcurrentMapSpec
    Service.CommandHandlerSpec
    Service.CommandSpec
    Service.EventStore.InMemorySpec
    Service.EventStore.Postgres.SubscriptionStoreSpec
    Service.EventStore.PostgresSpec
    Service.SnapshotCache.InMemorySpec
    SetSpec
    StreamSpec
    Test.AppSpec.AppSpecSpec
    Test.AppSpec.VerifySpec

  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base,
    hspec,
    nhcore,
