cabal-version: 3.4
name: nhcore
version: 0.9.1
synopsis: Core Library for NeoHaskell
description: NeoHaskell is a dialect of Haskell that is focused on newcomer-friendliness and productivity.
homepage: https://neohaskell.org
license: Apache-2.0
author: Nikita Tchayka
maintainer: nhlib@nickseagull.dev
copyright:
category: Development
build-type: Simple

common common_cfg
  ghc-options:
    -Wall
    -Wno-orphans
    -fno-warn-partial-type-signatures
    -fno-warn-name-shadowing
    -Werror
    -threaded

  build-depends:
    Cabal,
    QuickCheck,
    aeson,
    async,
    base,
    base64-bytestring,
    bytestring,
    case-insensitive,
    containers,
    contravariant-extras,
    crypton,
    data-default,
    deepseq,
    dir-traverse,
    directory,
    file-embed,
    ghc-prim,
    hashable,
    iproute,
    jose,
    lens,
    memory,
    stm,
    stm-containers,
    list-t,
    hasql,
    hasql-notifications,
    hasql-pool,
    hasql-th,
    hspec,
    http-client,
    http-conduit,
    http-types,
    large-anon,
    monad-loops,
    network,
    network-uri,
    openapi3,
    optparse-applicative,
    path,
    pretty-simple,
    process,
    quickcheck-instances,
    random,
    should-not-typecheck,
    strict,
    stringsearch,
    string-interpolate,
    template-haskell,
    text,
    text-manipulate,
    time,
    transformers,
    unagi-chan,
    uuid,
    vector,
    wai,
    wai-extra,
    warp,
    with-utf8,
    yaml,

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DeriveDataTypeable
    DuplicateRecordFields
    ImportQualifiedPost
    ImpredicativeTypes
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedLists
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    QualifiedDo
    QuasiQuotes
    Strict
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import: common_cfg
  exposed-modules:
    Accumulator
    Appendable
    Applicable
    Array
    AtomicVar
    AsyncTask
    Auth
    Auth.Claims
    Auth.Config
    Auth.Discovery
    Auth.Error
    Auth.Jwt
    Auth.Jwks
    Auth.Middleware
    Auth.OAuth2
    Auth.OAuth2.Client
    Auth.OAuth2.Provider
    Auth.OAuth2.RateLimiter
    Auth.OAuth2.Routes
    Auth.OAuth2.StateToken
    Auth.OAuth2.TransactionStore
    Auth.OAuth2.TransactionStore.InMemory
    Auth.OAuth2.TransactionStore.TransactionKey
    Auth.OAuth2.Types
    Auth.OAuth2.TokenRefresh
    Auth.Options
    Auth.SecretStore
    Auth.SecretStore.InMemory
    Auth.UrlValidation
    Basics
    Bytes
    Channel
    Char
    Collection
    Combinable
    Command
    ConcurrentMap
    ConcurrentVar
    Console
    Core
    DateTime
    Decider
    Default
    Directory
    Documented
    DurableChannel
    Environment
    File
    Float
    Function
    Http
    Http.Client
    Integration
    Integration.Command
    Integration.Lifecycle
    Integration.Timer
    Service.Integration.Dispatcher
    Service.Integration.Types
    IO
    Int
    Json
    LinkedList
    Lock
    Map
    Mappable
    Maybe
    Path
    Record
    Result
    Service
    Service.Auth
    Service.Command
    Service.Command.Core
    Service.CommandExecutor
    Service.CommandExecutor.Core
    Service.CommandExecutor.TH
    Service.Entity
    Service.Entity.Core
    Service.EntityFetcher
    Service.EntityFetcher.Core
    Service.Error
    Service.Event
    Service.Event.EntityName
    Service.Event.EventMetadata
    Service.Event.StreamId
    Service.Event.StreamPosition
    Service.EventStore
    Service.EventStore.Core
    Service.EventStore.InMemory
    Service.EventStore.Postgres
    Service.EventStore.Postgres.Internal
    Service.EventStore.Postgres.Core
    Service.EventStore.Postgres.Notifications
    Service.EventStore.Postgres.PostgresEventRecord
    Service.EventStore.Postgres.Sessions
    Service.EventStore.Postgres.SubscriptionStore
    Service.Application
    Service.Application.Integrations
    Service.Application.Transports
    Service.Query
    Service.Query.Auth
    Service.Query.Core
    Service.Query.Definition
    Service.Query.Endpoint
    Service.Query.Registry
    Service.Query.Subscriber
    Service.Query.TH
    Service.Query.Updater
    Service.QueryObjectStore
    Service.QueryObjectStore.Core
    Service.QueryObjectStore.InMemory
    Service.Response
    Service.SnapshotCache
    Service.SnapshotCache.Core
    Service.SnapshotCache.InMemory
    Service.SnapshotCache.Snapshot
    Service.FileUpload.Core
    Service.FileUpload.Lifecycle
    Service.FileUpload.BlobStore
    Service.FileUpload.BlobStore.Local
    Service.FileUpload.FileStateStore.Postgres
    Service.FileUpload.Routes
    Service.FileUpload.Resolver
    Service.FileUpload.Download
    Service.FileUpload.Web
    Service.ServiceDefinition
    Service.ServiceDefinition.Core
    Service.Transport
    Service.Transport.Web
    Service.Transport.Web.SwaggerUI
    Schema
    Schema.OpenApi
    Set
    Stream
    Subprocess
    Task
    Test
    Test.AppSpec
    Test.AppSpec.AppSpec
    Test.AppSpec.Scenario
    Test.AppSpec.Verify
    Test.Auth.Jwt.Core
    Test.CompileTime
    Test.Service.Command
    Test.Service.Command.Core
    Test.Service.Command.Decide.Context
    Test.Service.Command.Decide.Spec
    Test.Service.CommandHandler
    Test.Service.CommandHandler.Core
    Test.Service.CommandHandler.Execute.Context
    Test.Service.CommandHandler.Execute.Spec
    Test.Service.EntityFetcher
    Test.Service.EntityFetcher.Core
    Test.Service.EntityFetcher.Fetch.Context
    Test.Service.EntityFetcher.Fetch.Spec
    Test.Service.EntityFetcher.FetchWithCache.Context
    Test.Service.EntityFetcher.FetchWithCache.Spec
    Test.Service.EventStore
    Test.Service.EventStore.BatchValidation.Context
    Test.Service.EventStore.BatchValidation.Spec
    Test.Service.EventStore.Core
    Test.Service.EventStore.GlobalStreamOrdering.Context
    Test.Service.EventStore.GlobalStreamOrdering.Spec
    Test.Service.EventStore.IndividualStreamOrdering.Context
    Test.Service.EventStore.IndividualStreamOrdering.Spec
    Test.Service.EventStore.LocalPositionStamping.Spec
    Test.Service.EventStore.OptimisticConcurrency.Context
    Test.Service.EventStore.OptimisticConcurrency.Spec
    Test.Service.EventStore.ReadAllBackwardsFromEnd.Context
    Test.Service.EventStore.ReadAllBackwardsFromEnd.Spec
    Test.Service.EventStore.ReadAllForwardsFromStart.Context
    Test.Service.EventStore.ReadAllForwardsFromStart.Spec
    Test.Service.EventStore.StreamTruncation.Context
    Test.Service.EventStore.StreamTruncation.Spec
    Test.Service.EventStore.Subscriptions.Context
    Test.Service.EventStore.Subscriptions.SimpleSpec
    Test.Service.EventStore.Subscriptions.Spec
    Test.Service.QueryObjectStore
    Test.Service.QueryObjectStore.Core
    Test.Service.QueryObjectStore.InMemory.Context
    Test.Service.QueryObjectStore.InMemory.Spec
    Test.Service.SnapshotCache
    Test.Service.SnapshotCache.InMemory.Context
    Test.Service.SnapshotCache.InMemory.Spec
    Test.Service.FileUpload.FileStateStore
    Test.Spec
    Text
    Thenable
    Time
    ToText
    Trigger
    Tuple
    TypeName
    Unit
    Unknown
    Uuid
    Var
    Version

  -- other-modules:
  -- other-extensions:
  hs-source-dirs:
    auth
    core
    concurrency
    service
    json
    traits
    system
    http
    meta
    schema
    testlib
    options-parser

  default-language: GHC2021

test-suite nhcore-test
  import: common_cfg
  default-language: GHC2021
  ghc-options:
    -rtsopts
    -with-rtsopts=-N

  other-modules:
    Auth.InMemorySecretStoreSpec
    Auth.JwtSpec
    Auth.MiddlewareSpec
    Test.Auth.SecretStore
    Test.Auth.TestUtils
    Auth.OAuth2.ClientSpec
    Auth.OAuth2.RoutesSpec
    Auth.OAuth2.StateTokenSpec
    Auth.OAuth2.TransactionStoreSpec
    Auth.OAuth2.TypesSpec
    Auth.OAuth2.TokenRefreshSpec
    Auth.UrlValidationSpec
    Http.ClientSpec
    Http.ClientRawSpec
    ConcurrentMapSpec
    Integration.CommandSpec
    Integration.ContextSpec
    Integration.DispatcherSpec
    Integration.RuntimeSpec
    Integration.TimerSpec
    IntegrationSpec
    IntSpec
    Service.ApplicationSpec
    Service.CommandHandlerSpec
    Service.CommandSpec
    Service.EventStore.InMemorySpec
    Service.EventStore.Postgres.SubscriptionStoreSpec
    Service.EventStore.PostgresSpec
    Service.MockTransport
    Service.Query.EndpointSpec
    Service.Query.RegistrySpec
    Service.Query.SubscriberSpec
    Service.Query.THSpec
    Service.Query.UpdaterSpec
    Service.TestHelpers
    Service.Transport.WebSpec
    Service.QueryObjectStore.InMemorySpec
    Service.SnapshotCache.InMemorySpec
    SchemaSpec
    SetSpec
    StreamSpec
    Test.AppSpec.AppSpecSpec
    Test.AppSpec.VerifySpec
    Service.FileUpload.CoreSpec
    Service.FileUpload.LifecycleSpec
    Service.FileUpload.BlobStore.LocalSpec
    Service.FileUpload.RoutesSpec
    Service.FileUpload.ResolverSpec
    Service.FileUpload.DownloadSpec
    Service.FileUpload.FileStateStore.InMemorySpec
    Service.FileUpload.FileStateStore.PostgresSpec

  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base,
    hspec,
    nhcore,

test-suite nhcore-test-auth
  import: common_cfg
  default-language: GHC2021
  ghc-options:
    -rtsopts
    -with-rtsopts=-N
    -Wno-missing-home-modules

  other-modules:
    Auth.InMemorySecretStoreSpec
    Auth.JwtSpec
    Auth.MiddlewareSpec
    Auth.OAuth2.ClientSpec
    Auth.OAuth2.RoutesSpec
    Auth.OAuth2.StateTokenSpec
    Auth.OAuth2.TokenRefreshSpec
    Auth.OAuth2.TransactionStoreSpec
    Auth.OAuth2.TypesSpec
    Auth.UrlValidationSpec
    Test.Auth.SecretStore
    Test.Auth.TestUtils

  type: exitcode-stdio-1.0
  hs-source-dirs: test-auth, test
  main-is: Main.hs
  build-depends:
    base,
    hspec,
    nhcore,

test-suite nhcore-test-service
  import: common_cfg
  default-language: GHC2021
  ghc-options:
    -rtsopts
    -with-rtsopts=-N
    -Wno-missing-home-modules

  other-modules:
    Service.ApplicationSpec
    Service.CommandHandlerSpec
    Service.CommandSpec
    Service.EventStore.InMemorySpec
    Service.EventStore.Postgres.SubscriptionStoreSpec
    Service.EventStore.PostgresSpec
    Service.FileUpload.BlobStore.LocalSpec
    Service.FileUpload.CoreSpec
    Service.FileUpload.DownloadSpec
    Service.FileUpload.FileStateStore.InMemorySpec
    Service.FileUpload.FileStateStore.PostgresSpec
    Service.FileUpload.LifecycleSpec
    Service.FileUpload.ResolverSpec
    Service.FileUpload.RoutesSpec
    Service.MockTransport
    Service.Query.EndpointSpec
    Service.Query.RegistrySpec
    Service.Query.SubscriberSpec
    Service.Query.THSpec
    Service.Query.UpdaterSpec
    Service.QueryObjectStore.InMemorySpec
    Service.SnapshotCache.InMemorySpec
    Service.TestHelpers
    Service.Transport.WebSpec

  type: exitcode-stdio-1.0
  hs-source-dirs: test-service, test
  main-is: Main.hs
  build-depends:
    base,
    hspec,
    nhcore,

test-suite nhcore-test-integration
  import: common_cfg
  default-language: GHC2021
  ghc-options:
    -rtsopts
    -with-rtsopts=-N
    -Wno-missing-home-modules

  other-modules:
    Integration.CommandSpec
    Integration.ContextSpec
    Integration.DispatcherSpec
    Integration.RuntimeSpec
    Integration.TimerSpec
    IntegrationSpec
    Service.MockTransport
    Service.TestHelpers

  type: exitcode-stdio-1.0
  hs-source-dirs: test-integration, test
  main-is: Main.hs
  build-depends:
    base,
    hspec,
    nhcore,

test-suite nhcore-test-core
  import: common_cfg
  default-language: GHC2021
  ghc-options:
    -rtsopts
    -with-rtsopts=-N
    -Wno-missing-home-modules

  other-modules:
    ConcurrentMapSpec
    Http.ClientRawSpec
    Http.ClientSpec
    IntSpec
    SchemaSpec
    SetSpec
    StreamSpec
    Test.AppSpec.AppSpecSpec
    Test.AppSpec.VerifySpec

  type: exitcode-stdio-1.0
  hs-source-dirs: test-core, test
  main-is: Main.hs
  build-depends:
    base,
    hspec,
    nhcore,
