[package]
description = "NeoHaskell installer"
license = "MIT"
repository = "https://github.com/neohaskell/neo-installer"

name = "neo-install"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
anyhow = "1"
thiserror = "2"
which = "7"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
