cabal-version: 3.4
name: nhintegrations
version: 0.1.0.0
synopsis: External Service Integrations for NeoHaskell
description:
  Provides integrations with external services following the two-persona model.
  Jess configures requests with pure records.
  Nick implements ToAction with retries, auth, error handling.
  See ADR-0015 for design details.
homepage: https://neohaskell.org
license: Apache-2.0
license-file: LICENSE
author: NeoHaskell Contributors
maintainer: nhlib@nickseagull.dev
category: Web, AI
build-type: Simple

common common_cfg
  ghc-options:
    -Wall
    -Wno-orphans
    -threaded
    -fno-warn-partial-type-signatures
    -fno-warn-name-shadowing
    -Werror

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DeriveDataTypeable
    DuplicateRecordFields
    ImportQualifiedPost
    ImpredicativeTypes
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedLists
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    QualifiedDo
    QuasiQuotes
    Strict
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
    base,
    nhcore

library
  import: common_cfg
  exposed-modules:
    Integration.Http
    Integration.Http.Auth
    Integration.Http.Internal
    Integration.Http.Request
    Integration.Http.Response
    Integration.Http.Retry
    Integration.OpenRouter
    Integration.OpenRouter.Internal
    Integration.OpenRouter.Message
    Integration.OpenRouter.Request
    Integration.OpenRouter.Response
    Integration.Oura
    Integration.Oura.Activity
    Integration.Oura.HeartRate
    Integration.Oura.Internal
    Integration.Oura.Provider
    Integration.Oura.Readiness
    Integration.Oura.Sleep
    Integration.Oura.SyncAll
    Integration.Oura.Types
  hs-source-dirs: .
  default-language: GHC2021

test-suite nhintegrations-test
  import: common_cfg
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Integration.Http.AuthSpec
    Integration.Http.InternalSpec
    Integration.Http.RequestSpec
    Integration.Http.RetrySpec
    Integration.OpenRouter.InternalSpec
    Integration.OpenRouter.MessageSpec
    Integration.OpenRouter.ResponseSpec
    Integration.Oura.ActivitySpec
    Integration.Oura.HeartRateSpec
    Integration.Oura.InternalSpec
    Integration.Oura.ProviderSpec
    Integration.Oura.ReadinessSpec
    Integration.Oura.SleepSpec
    Integration.Oura.SyncAllSpec
    Integration.Oura.TypesSpec
  build-depends:
    hspec,
    nhintegrations
  default-language: GHC2021
  ghc-options:
    -rtsopts
    -with-rtsopts=-N
