cabal-version:  3.4
name:           nhclippy
version:        0.0.1
synopsis:       Clippy plugin for NeoHaskell
description:    NeoHaskell is a dialect of Haskell that is focused on newcomer-friendliness and productivity.
homepage:       https://neohaskell.org
license:        Apache-2.0
author:         Nikita Tchayka
maintainer:     nhclippy@nickseagull.dev
copyright:
build-type:     Simple

library
  exposed-modules:
      Clippy
  other-modules:
      Paths_nhclippy
      Clippy.Rules
  hs-source-dirs:
      src
  ghc-options: -Wall -Werror
  build-depends:
      base ^>=4.17
    , ghc ^>=9.2
    , text
    , text-icu
    , text-regex-replace
  default-language: GHC2021
